remove using translate so it stops being blurry

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -6,21 +6,19 @@
     width:100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-main {
     border-radius: 5px;
     padding: 20px;
-    position:fixed;
     background: white;
-    height: auto;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    height: fit-content;
 }
 
-.display-block {
-    display: block;
+.display-flex {
+    display: flex;
 }
 
 .display-none {
